Fix login page - SVG was taking up too much vertical space

--- a/www/scss/style.scss
+++ b/www/scss/style.scss
@@ -119,7 +119,7 @@ body {
     }
 }
 .handle {
-    margin-top: 100px;
+    margin-top: 15%;
 }
 .form {
     &-text,
